# pdf-document-extractor

./: .gitignore  README.md  pyproject.toml
lib/aws/: __init__.py  aws_helper.py  config.py
lib/kafka/: __init__.py  config.py  kafka.py
lib/logger/: __init__.py  logger.py
lib/models/: __init__.py  extraction_models.py  ingestion_status.py  mime_type.py  mime_type_utils.py  pipeline_event.py  utils.py
src/: main.py
src/api/: main.py
src/api/routes/: document_processing.py  info.py  swagger.py
src/configs/: __init__.py  settings.py
src/core/: postgres_connection_manager.py
src/dependencies/: __init__.py  providers.py
src/exceptions/: domain_exceptions.py  error_handler.py
src/interfaces/: __init__.py  document_processor.py  extraction_client.py  image_analysis.py  status_tracker.py  storage.py
src/models/: docling_models.py  extraction_models.py  extraction_request.py  extraction_response.py  image_analysis_models.py  processing_models.py  processing_result.py  status_models.py
src/services/: asset_storage_service.py  bedrock_image_analysis_service.py  extraction_api_client.py  imported_services.py  kafka_background_service.py  kafka_message_handler.py  processing_config_manager.py  processing_orchestrator.py  s3_service.py  status_tracker.py  storage_utils.py
src/services/extractors/api/: api_extraction_processor.py
src/services/extractors/docling/: docling_strategy_processor.py
src/utils/: __init__.py  critical_failure_handler.py  image_validator.py
tests/: conftest.py  test_e2e_kafka_flow.py  test_html_removal_verification.py  test_image_analysis_integration.py  test_integration_api.py  test_kafka_integration_flow.py
tests/api/: test_routes_clean.py
tests/models/: __init__.py
tests/services/: test_asset_storage_service.py  test_basic_imports.py  test_bedrock_image_analysis_service.py  test_docling_service_comprehensive.py  test_processing_config_manager.py  test_s3_service_comprehensive.py  test_storage_utils.py
tests/services/extractors/: test_api_extraction_processor.py
